2006-03-03  Don Allingham  <don@gramps-project.org>
	* src/images/Makefile.am: restore
	* src/plugins/Makefile.am: remove stock_link.png from dependency list

2006-03-03  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/stock_link.png: Remove (already present in
	src/images, used by ScratchPad only).
	* src/Config, src/Mime, src/images: Ignore Makefiles.	

2006-03-03  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/Makefile.am: install correct files
	* src/Config/Makefile.am: added
	* src/MapView.py: fix image paths 
	* src/Mime/Makefile.am: added
	* src/images/Makefile: added
	* src/gramps_main.py: fix image paths
	* src/Makefile.am: install correct files

2006-03-03  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Mime/__init__.py: Honour renamed files
	* src/Makefile.am: Images have been moved into subdir (makes "make" work again)
	* src/FamilyView.py (info_string): Done crash is None as handle was
	given (e.g. no father in family)
	* src/plugins/TestcaseGenerator.py: Feed in more data, support Repositories,
	properly set types as (id,str) tuples instead of custom strings.
	* src/Makefile.am: More updates to latest file moves/remanes to make
	"make distcheck" work for me 

2006-03-02  Don Allingham  <don@gramps-project.org>
	* src/EditUrl.py: renamed from UrlEdit.py
	* src/Makefile.am: adapt to module renames
	* src/NoteEdit.py: removed
	* src/EditAttribute.py: renamed from AttrEdit.py
	* src/EditAddress.py: renamed from AddrEdit.py
	* src/DisplayTabs.py: adapt to module renames
	* src/GrampsDb/_GedcomInfo.py: update to new data path
	* src/const.py.in: new data, image path defintions
	* src/gramps_main.py: update to new install paths
	* src/Assistant.py: update to new install paths
	* src/ImgManip.py: update to new install paths
	* src/ObjectSelector/_FamilyPreviewFrame.py: update to new install paths
	* src/ObjectSelector/_OjbectSelectorWindow.py: update to new install paths